0.3.5.11
  - (zathor) [x264] fixed more than one --sar in the command line. Bug #3038722
  - (zathor) [MuxWindow] added a unique title to every mux window. Feature request #2937578

0.3.5.10
  - (sharktooth) [x264] Added 64:45 SAR option
  - (sharktooth) [MainForm.cs] Typo
  - (zathor) [Settings] added option for DGIndex(NV) to autoload VOB files
             incrementally. Default value is enabled. Feature request #2955909
  - (zathor) [Settings] added option to close MeGUI after encoding.
             Default value is still "Do nothing". Feature request #2954099
  - (zathor) [Settings] added option start the queue at program start.
             Default value is disabled. Feature request #1908749
  - (zathor) [JobUtil] display overwrite confirmation dialog for the output file
             during initial job creation if it is necessary. Feature request #3022005
  - (zathor) [OneClickEncoder] added support for DGIndexNV and DGAVCIndex

0.3.5.9
  - (sharktooth) [MainForm.cs] Added a big fat warning about patents and binary files when megui finds updates
  - (sharktooth) [x264] Added 2 new "Force SAR" options
  - (sharktooth) [x264] Enabled Trellis with no-cabac option (requires x264 rev 1703+)
  - (zathor) [FPSChooser] + [TargetSizeSCBox] fixed custom FPS and file size saving
  - (zathor) [LogItem] changed default log type to information
  - (zathor) [HDBDStreamExtractor] HdBrStreamExtractor.txt not created anymore
  - (zathor) [HDStreamExtractorIndexer] improved log handling
  - (zathor) [JobQueue] fixed load context menu option. Bug #3024349
  - (zathor) [MuxWindow] language and video name will be visible during load. Bug #3024349
  - (zathor) [JobQueue] enhanced load handling
  - (zathor) [MeGUISettings] + [UpdateWindow] + [VobSubIndexer] added vobsub.dll
  - (zathor) [VobSubIndexWindow] some cosmetics including option to override detection
  - (zathor) [IFOparser] fixed detection of subtitle streams. Bug #2773128